--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-numpy==1.25.0
+numpy==2.2.6
 requests==2.32.3
 SPARQLWrapper==2.0.0
-huggingface-hub==0.23.4
-openai==1.35.12
-groq===0.11.0
+huggingface-hub==0.32.4
+openai==1.85.0
+groq===0.26.0
+tqdm==4.67.1
+pandas==2.3.0
+tenacity==9.1.2
+openpyxl==3.1.5
+anthropic==0.54.0
+groq==0.26.0
+python-dotenv==1.1.0
